<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>odrive_ros</name>
  <version>0.8.1</version>
  <description>ODrive motor controller driver for ROS</description>
  <license>Modified BSD</license>

  <maintainer email="josh.marshall@tecevo.com">Josh Marshall, Tecevo</maintainer>
  <url type="website">https://github.com/neomanic/odrive_ros</url>
  <maintainer email="mattanimation@gmail.com">Matt Murray, Station</maintainer>
  <url type="website">https://github.com/mattanimation/odrive_ros</url>


  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>

  <!-- <exec_depend>odrive_ros</exec_depend> -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

